Fix contrast problem

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -7,7 +7,7 @@
   --light-slate: #a8b2d1;
   --lightest-slate: #ccd6f6;
   --basic-background: #0a192f;
-  --lightest-navy: #233554;
+  --lightest-navy: #112240;
 }
 
 p {
